--- a/package.json
+++ b/package.json
@@ -25,5 +25,13 @@
   "bugs": {
     "url": "https://github.com/7odri9o/todo-api-js/issues"
   },
-  "homepage": "https://github.com/7odri9o/todo-api-js#readme"
+  "homepage": "https://github.com/7odri9o/todo-api-js#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.4.7",
+    "morgan": "^1.9.1"
+  }
 }
