--- a/package.json
+++ b/package.json
@@ -33,5 +33,11 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.4.7",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.3",
+    "sinon-mongoose": "^2.2.1"
   }
 }
